# energy_optimization

./: .gitignore  README.md  pyproject.toml
notebooks/: train_model.ipynb
notebooks/.ipynb_checkpoints/: train_model-checkpoint.ipynb  train_model_with_metrics-checkpoint.ipynb
src/steel_energy_opt/: __init__.py  data_processor.py  model.py  train.py
