[tool.poetry]
name = "steel-energy-optimization"
version = "0.1.0"
description = "Deep learning solution for optimizing energy consumption in steel manufacturing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "steel_energy_opt", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
tqdm = "^4.66.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
